[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/instance/switches/singingSwitch.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/statueSwitch.gd" type="Script" id=2]
[ext_resource path="res://scenes/instance/switches/singingSwitchParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/instance/DialogChoiceList.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/assets/architecture/VariableStatue.tscn" type="PackedScene" id=5]

[node name="statueSwitch" type="Node2D"]
script = ExtResource( 2 )

[node name="singingSwitch" parent="." instance=ExtResource( 1 )]
position = Vector2( 4.23782, -6.35684 )
scale = Vector2( 8, 8 )

[node name="DialogChoiceList" parent="singingSwitch" instance=ExtResource( 4 )]

[node name="singingSwitchParticles" parent="." instance=ExtResource( 3 )]
position = Vector2( 10.5946, -36.0218 )

[node name="VariableStatue" parent="." instance=ExtResource( 5 )]
position = Vector2( 4.23779, -10.5946 )

[connection signal="completed_dialog" from="singingSwitch/DialogChoiceList" to="." method="_on_DialogChoiceList_completed_dialog"]
